--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@tailwindcss/cli": "^4.1.12",
     "@tailwindcss/vite": "^4.1.12",
     "howler": "^2.2.4",
-    "install": "^0.13.0"
+    "install": "^0.13.0",
+    "interactjs": "^1.10.27",
+    "svelte-carousel": "^1.0.25",
+    "swiper": "^11.2.10"
   }
 }
