--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "@sveltejs/adapter-cloudflare": "^7.2.2",
     "@tailwindcss/cli": "^4.1.12",
     "@tailwindcss/vite": "^4.1.12",
+    "@zoom-image/svelte": "^0.3.7",
     "howler": "^2.2.4",
     "install": "^0.13.0",
     "interactjs": "^1.10.27",
     "pinch-zoom-js": "^2.3.5",
     "svelte-carousel": "^1.0.25",
+    "svelte-zoom": "^1.0.16",
     "swiper": "^11.2.10"
   }
 }
